# NullTrace

./: .env  .gitignore  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: main.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/static/js/modules/: group.js  handshake.js  mls.js  nacp.js
frontend/static/libs/: libsodium-wrappers.js  mlkem.js
frontend/templates/: index.html
